--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
     "lucide-react": "^0.441.0",
-    "next": "^14.2.10",
+    "next": "^14.2.11",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
